--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,32 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>React App</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+
+
+    <script>
+     
+    </script>
+
+    <!-- Global beforeunload script -->
+    <script>
+      window.globalHasUnprocessedTransaction = false;
+
+      window.addEventListener('beforeunload', function(event) {
+        console.log('beforeunload event triggered');
+        console.log('Global has unprocessed transaction:', window.globalHasUnprocessedTransaction);
+        if (window.globalHasUnprocessedTransaction) {
+          event.preventDefault();
+          event.returnValue = 'You have unprocessed transactions. Are you sure you want to leave?';
+        }
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
- 
   </body>
 </html>
