--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Professional catering services for events, offering a variety of delicious dishes for any occasion." 
-    data-rh="true"/>
-    <meta property="og:title" content="Catering Services" />
+    data-rh="true"/>git add .
+    git commit -m "website upgrade"
+    git push -u origin main" />
     <meta property="og:description" content="Top-quality catering services for events, weddings, and parties." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://madame-kemmie-special.vercel.app/" />
